--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
                     <ul class="nav navbar-nav navbar-right">
                          <li><a href="#">Call Now! <i class="fa fa-phone"></i> 010 020 0340</a></li>
-                         <a href="#footer" class="section-btn">Reserve a table</a>
+                         <a href="#footer" class="section-btn">Reserve a Table</a>
                     </ul>
                </div>
 
