--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     <ul class="nav navbar-nav navbar-nav-first">
                          <li><a href="#home" class="smoothScroll">Home</a></li>
                          <li><a href="#about" class="smoothScroll">About</a></li>
-                         <li><a href="#team" class="smoothScroll">Chef</a></li>
+                         <li><a href="#team" class="smoothScroll">Chief</a></li>
                          <li><a href="#menu" class="smoothScroll">Menu</a></li>
                          <li><a href="#contact" class="smoothScroll">Contact</a></li>
                     </ul>
@@ -72,7 +72,7 @@
                                         <div class="col-md-8 col-sm-12">
                                              <h3>Eatery Cafe &amp; Restaurant</h3>
                                              <h1>Our mission is to provide an unforgettable experience</h1>
-                                             <a href="#team" class="section-btn btn btn-default smoothScroll">Meet our chef</a>
+                                             <a href="#team" class="section-btn btn btn-default smoothScroll">Meet Our chef</a>
                                         </div>
                                    </div>
                               </div>
