--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                                    <div class="container">
                                         <div class="col-md-8 col-sm-12">
                                              <h3>Your Perfect Breakfast</h3>
-                                             <h1>The best dinning quality can be here too!</h1>
+                                             <h1>The Best Dinning quality can be here too!</h1>
                                              <a href="#menu" class="section-btn btn btn-default smoothScroll">Discover menu</a>
                                         </div>
                                    </div>
