--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 
                     <div class="col-md-12 col-sm-12">
                          <div class="section-title wow fadeInUp" data-wow-delay="0.1s">
-                              <h2>Meet our chefs</h2>
+                              <h2>Meet Our Chefs</h2>
                               <h4>They are nice &amp; friendly</h4>
                          </div>
                     </div>
