--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                                    <div class="container">
                                         <div class="col-md-8 col-sm-12">
                                              <h3>Eatery Cafe &amp; Restaurant</h3>
-                                             <h1>Our mission is to provide an unforgettable experience</h1>
+                                             <h1>Our Mission is to provide an unforgettable experience</h1>
                                              <a href="#team" class="section-btn btn btn-default smoothScroll">Meet Our chef</a>
                                         </div>
                                    </div>
