--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                                    <div class="container">
                                         <div class="col-md-8 col-sm-12">
                                              <h3>New Restaurant In Town</h3>
-                                             <h1>Enjoy our special menus every Sunday and Friday</h1>
+                                             <h1>Enjoy Our Special menus every Sunday and Friday</h1>
                                              <a href="#contact" class="section-btn btn btn-default smoothScroll">Reservation</a>
                                         </div>
                                    </div>
