--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                                         <div class="col-md-8 col-sm-12">
                                              <h3>Eatery Cafe &amp; Restaurant</h3>
                                              <h1>Our Mission is to provide an unforgettable Experience</h1>
-                                             <a href="#team" class="section-btn btn btn-default smoothScroll">Meet Our chef</a>
+                                             <a href="#team" class="section-btn btn btn-default smoothScroll">Meet Our Chefs</a>
                                         </div>
                                    </div>
                               </div>
