--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                     </ul>
 
                     <ul class="nav navbar-nav navbar-right">
-                         <li><a href="#">Call Now! <i class="fa fa-phone"></i> 010 020 0340</a></li>
+                         <li><a href="#">Call Now! <i class="fa fa-phone"></i> 010002030340</a></li>
                          <a href="#footer" class="section-btn">Reserve A Table</a>
                     </ul>
                </div>
