--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                                         <div class="col-md-8 col-sm-12">
                                              <h3>Your Perfect Breakfast</h3>
                                              <h1>The Best Dinning Quality can be here too!</h1>
-                                             <a href="#menu" class="section-btn btn btn-default smoothScroll">Discover menu</a>
+                                             <a href="#menu" class="section-btn btn btn-default smoothScroll">Discover Menu</a>
                                         </div>
                                    </div>
                               </div>
